update image_classifier module

--- a/code/image_classification/VGG19_finetune.ipynb
+++ b/code/image_classification/VGG19_finetune.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "32b50504-ec4e-4e22-821d-b36469dbe81d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -38,7 +43,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "db93b107-f3fb-4968-b587-a0f424a7d3b9",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Functions and default variables\n",
@@ -141,7 +151,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "53b477bc-42fc-4509-8e3a-9ae147029acc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -309,7 +324,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "7823bc8b-d997-4414-912e-bdcf96555e65",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# # Dataset Load\n",
@@ -348,7 +368,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "b23a61de-0386-4b3a-b148-0628ff2ebd41",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -373,7 +398,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f317f16c-f89a-49a1-bb83-787a0b036554",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -430,7 +460,12 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "d308884d-aea9-4ca4-be15-f73394f61a4e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -527,7 +562,12 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "fc0353f1-c204-486a-9363-415c18dfced4",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -550,7 +590,12 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "2767f658-b84d-4f48-95d9-41476cd2dcde",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Freeze all layers except the last layer for fine-tune\n",
@@ -565,7 +610,12 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "68e56684-5397-4d27-a904-12fd6c8ace09",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -593,7 +643,12 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "8374e727-adba-44dc-9292-b30f44138c75",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Loss function and optimizer\n",
@@ -605,7 +660,12 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "8a06191a-0902-430f-b70f-26654fd540a3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Early Stopping\n",
@@ -644,7 +704,12 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "688bd164-d3ff-487f-87a1-faf542033223",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Training function\n",
@@ -730,7 +795,12 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "1770649e-52c7-4d20-8b77-797fd6730a40",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -980,7 +1050,12 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "77c96b96-2c95-44b6-8343-ecf699590c84",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1061,7 +1136,12 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "65ad7787-2b3e-4167-933f-91e216dead57",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1083,7 +1163,12 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "5e2b631b-15a3-49ca-93d9-6588e93a0704",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1104,7 +1189,12 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "58b7db54-daa3-4709-ae0b-eba7a0b80294",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Setting up for creating confusion metrics\n",
@@ -1115,31 +1205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0ffc31c6-b24c-4011-9eab-b82d048837ce",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'history' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Plotting Data\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Accuracy plot\u001b[39;00m\n\u001b[0;32m      3\u001b[0m fig \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mfigure()\n\u001b[1;32m----> 4\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43mhistory\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain_accuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(history[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_accuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mModel Accuracy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'history' is not defined"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Plotting Data\n",
     "# Accuracy plot\n",
@@ -1175,7 +1244,12 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "7fbc8dbb-716c-471f-a2a8-cfd0f987e3d3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1264,7 +1338,12 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "0f842efa-92c4-479f-881b-e4290459ac84",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Test for new images\n",
@@ -1280,7 +1359,12 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "fd718e1c-7585-4375-8937-e73af21395a1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def softmax(a):\n",
@@ -1295,7 +1379,12 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "6beb271e-9763-4450-aa29-11b0b1a771b2",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1333,7 +1422,12 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "9063e48f-fe43-4ae5-847b-50928dd2b572",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# model_state_path = '../../code/assets/VGG19_acc94_240728.pth'\n",
