--- a/code/text_summarization/G-EVAL_testcode.ipynb
+++ b/code/text_summarization/G-EVAL_testcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "7661fd00-51c5-47e4-93d4-2a2cdfb17618",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "eed3d9bb-0072-4785-bc17-eee15c616d5b",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "6bf2b9c1-af8e-44d0-a5b1-9757abd5277e",
    "metadata": {},
    "outputs": [],
@@ -190,10 +190,10 @@
     "        return : 요약 텍스트에 대한 relevance, coherence, consistency, fluency G-EVAL 점수\n",
     "        '''\n",
     "        evaluation_metrics = {\n",
-    "            \"Relevance\": (RELEVANCY_SCORE_CRITERIA, RELEVANCY_SCORE_STEPS),\n",
-    "            \"Coherence\": (COHERENCE_SCORE_CRITERIA, COHERENCE_SCORE_STEPS),\n",
-    "            \"Consistency\": (CONSISTENCY_SCORE_CRITERIA, CONSISTENCY_SCORE_STEPS),\n",
-    "            \"Fluency\": (FLUENCY_SCORE_CRITERIA, FLUENCY_SCORE_STEPS)\n",
+    "            \"Relevance\": (self.RELEVANCY_SCORE_CRITERIA, self.RELEVANCY_SCORE_STEPS),\n",
+    "            \"Coherence\": (self.COHERENCE_SCORE_CRITERIA, self.COHERENCE_SCORE_STEPS),\n",
+    "            \"Consistency\": (self.CONSISTENCY_SCORE_CRITERIA, self.CONSISTENCY_SCORE_STEPS),\n",
+    "            \"Fluency\": (self.FLUENCY_SCORE_CRITERIA, self.FLUENCY_SCORE_STEPS)\n",
     "        }\n",
     "        scores = []\n",
     "        for evaluation_type, (criteria, steps) in evaluation_metrics.items():\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "8b373d4e-9979-4249-99af-5d971ea86389",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "ef9e7a3e-800c-448e-bc94-145945120a4d",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "9dc24c82-7fde-4b19-a6f8-83d6ea0606bf",
    "metadata": {},
    "outputs": [
@@ -308,8 +308,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>arima_text</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -331,7 +331,63 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>blind_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>braintumor_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>disease_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>energy_text</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hangang_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>insideout_text</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>interior_text</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>kospi_text</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
@@ -339,10 +395,237 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>hangang_text</td>\n",
+       "      <td>lier-detector_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>netflix_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>restaurant_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>webtoon_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  pdf relevance coherence consistency fluency\n",
+       "0          arima_text         5         5           5       3\n",
+       "0       asiancup_text         4         4           5       3\n",
+       "0         barbot_text         4         4           5       3\n",
+       "0          blind_text         4         4           4       3\n",
+       "0     braintumor_text         4         4           4       3\n",
+       "0        disease_text         4         4           5       3\n",
+       "0         energy_text         5         4           5       3\n",
+       "0        hangang_text         4         4           4       3\n",
+       "0      insideout_text         5         4           5       3\n",
+       "0       interior_text         5         4           5       3\n",
+       "0          kospi_text         4         4           4       2\n",
+       "0  lier-detector_text         4         4           4       3\n",
+       "0        netflix_text         4         4           4       3\n",
+       "0     restaurant_text         4         4           4       3\n",
+       "0        webtoon_text         4         4           4       3"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e90758f3-9197-4a2b-b2c8-fdf9cf5f1edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arima_text.txt\n",
+      "asiancup_text.txt\n",
+      "barbot_text.txt\n",
+      "blind_text.txt\n",
+      "braintumor_text.txt\n",
+      "disease_text.txt\n",
+      "energy_text.txt\n",
+      "hangang_text.txt\n",
+      "insideout_text.txt\n",
+      "interior_text.txt\n",
+      "kospi_text.txt\n",
+      "lier-detector_text.txt\n",
+      "netflix_text.txt\n",
+      "restaurant_text.txt\n",
+      "webtoon_text.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load Documnets and summaries\n",
+    "ROOT = 'bitamin_auto_readme_generator'\n",
+    "root_absdir = os.getcwd().split(ROOT)[0]+ROOT\n",
+    "\n",
+    "doc_dir = os.path.join(root_absdir,'data','object_detection','output','ocr_samples_txt')\n",
+    "doc_files = os.listdir(doc_dir)\n",
+    "\n",
+    "summ_dir = os.path.join(root_absdir,'data','text_summarization','output','cluster_n_summary_temp0')\n",
+    "\n",
+    "scores_df = pd.DataFrame(columns=['pdf','relevance','coherence','consistency','fluency'])\n",
+    "for filename in doc_files:\n",
+    "    with open(os.path.join(doc_dir, filename), 'r', encoding='utf-8') as f:\n",
+    "        document = f.readlines()\n",
+    "    if os.path.exists(os.path.join(summ_dir, filename)):\n",
+    "        with open(os.path.join(summ_dir, filename), 'r', encoding = 'utf-8') as f:\n",
+    "            summary = f.readlines()\n",
+    "    else:\n",
+    "        print(\"⚠️Summary doesn't exist\")\n",
+    "        break\n",
+    "\n",
+    "    # preprocess\n",
+    "    document = ''.join(document)\n",
+    "    document = erase_tag(document, 'p.\\d*')\n",
+    "    # document = document.replace('\\n','')\n",
+    "    summary = ''.join(summary)\n",
+    "\n",
+    "    # Evaluate\n",
+    "    rel, coh, cons, flu =gpt.get_geval_score(document, summary, model='gpt-4o-mini')\n",
+    "\n",
+    "    new_row = pd.DataFrame(data=[[filename.replace('.txt',''),rel,coh,cons,flu]],\n",
+    "                          columns=scores_df.columns)\n",
+    "    scores_df = pd.concat([scores_df, new_row], axis=0)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "deefb417-147c-4399-be55-63f45ef7a7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>relevance</th>\n",
+       "      <th>coherence</th>\n",
+       "      <th>consistency</th>\n",
+       "      <th>fluency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>arima_text</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>asiancup_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>barbot_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>blind_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>braintumor_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>disease_text</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>energy_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hangang_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>insideout_text</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -367,14 +650,22 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>netflix_text</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>restaurant_text</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -391,19 +682,24 @@
       ],
       "text/plain": [
        "                  pdf relevance coherence consistency fluency\n",
-       "0          arima_text         4         4           5       3\n",
-       "0       asiancup_text         4         4           5       3\n",
-       "0         barbot_text         4         4           5       3\n",
-       "0     braintumor_text         4         4           4       2\n",
-       "0        hangang_text         4         4           5       3\n",
+       "0          arima_text         5         5           5       3\n",
+       "0       asiancup_text         4         4           4       3\n",
+       "0         barbot_text         4         4           4       3\n",
+       "0          blind_text         4         4           4       3\n",
+       "0     braintumor_text         4         4           4       3\n",
+       "0        disease_text         4         4           5       3\n",
+       "0         energy_text         4         4           4       3\n",
+       "0        hangang_text         4         4           4       2\n",
+       "0      insideout_text         5         4           4       3\n",
        "0       interior_text         5         4           5       3\n",
        "0          kospi_text         4         4           4       3\n",
-       "0  lier-detector_text         4         4           4       2\n",
-       "0        netflix_text         4         4           5       3\n",
+       "0  lier-detector_text         4         4           4       3\n",
+       "0        netflix_text         4         4           4       3\n",
+       "0     restaurant_text         4         4           4       3\n",
        "0        webtoon_text         4         4           5       3"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,15 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90758f3-9197-4a2b-b2c8-fdf9cf5f1edd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "deefb417-147c-4399-be55-63f45ef7a7e5",
+   "id": "56de69e5-8cd7-45a5-8927-5236b7c595c7",
    "metadata": {},
    "outputs": [],
    "source": []
