--- a/code/text_summarization/G-EVAL_testcode.ipynb
+++ b/code/text_summarization/G-EVAL_testcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "7661fd00-51c5-47e4-93d4-2a2cdfb17618",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "eed3d9bb-0072-4785-bc17-eee15c616d5b",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "6bf2b9c1-af8e-44d0-a5b1-9757abd5277e",
    "metadata": {},
    "outputs": [],
@@ -1851,31 +1851,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "91da427e-1430-48be-ac99-cf33dd894621",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 0, 2: 0, 3: 0, 4: 0, 5: 0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_list = [0, 1, 2, 3, 3, 4, 5, 5, 5, 5]\n",
+    "{i: 0 for i in set(scores_list)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b8c8efa1-a0a2-4298-ba48-7641aeb56772",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'summ_dir\\\\asiancup_text.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m root_absdir \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetcwd()\u001b[38;5;241m.\u001b[39msplit(ROOT)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39mROOT\n\u001b[0;32m      4\u001b[0m summ_dir \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root_absdir,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext_summarization\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutput\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmethod2\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msumm_dir\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43masiancup_text.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      6\u001b[0m     summary \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(summary)\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\arg\\lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'summ_dir\\\\asiancup_text.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0.1, 1: 0.1, 2: 0.1, 3: 0.2, 4: 0.1, 5: 0.4}\n",
+      "The weighted average is: 3.3000000000000003\n"
      ]
     }
    ],
    "source": [
+    "scores_list = [0, 1, 2, 3, 3, 4, 5, 5, 5, 5]\n",
+    "def calculate_weighted_average(scores):\n",
+    "    \"\"\"\n",
+    "    Calculate the weighted average of a list of scores, where the weights are determined\n",
+    "    by the frequency of each score in the list.\n",
+    "\n",
+    "    :param scores: A list of integer scores in the range of 0 to 5.\n",
+    "    :return: The weighted average of the scores.\n",
+    "    \"\"\"\n",
+    "    # Check if the list is empty\n",
+    "    if not scores:\n",
+    "        return 0\n",
+    "\n",
+    "    # Calculate the frequency of each score\n",
+    "    score_counts = {i: 0 for i in set(scores)}  # Initialize counts for scores 0 to 5\n",
+    "    for score in scores:\n",
+    "        score_counts[score] += 1\n",
+    "\n",
+    "    # Calculate the total number of scores\n",
+    "    total_scores = len(scores)\n",
+    "\n",
+    "    # Calculate probabilities (weights) for each score\n",
+    "    probabilities = {score: count / total_scores for score, count in score_counts.items()}\n",
+    "    print(probabilities)\n",
+    "\n",
+    "    # Calculate the weighted average (weighted sum)\n",
+    "    weighted_sum = sum(score * probabilities[score] for score in set(scores))\n",
+    "    return weighted_sum\n",
+    "result = calculate_weighted_average(scores_list)\n",
+    "print(f\"The weighted average is: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e3b72099-602d-428c-a4fb-31a1ceb7f4cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ROOT = 'bitamin_auto_readme_generator'\n",
     "root_absdir = os.getcwd().split(ROOT)[0]+ROOT\n",
     "\n",
-    "summ_dir = os.path.join(root_absdir,'data','text_summarization','output','method2')\n",
-    "with open(os.path.join('summ_dir','asiancup_text.txt'),'r',encoding='utf-8') as f:\n",
-    "    summary = f.readlines()\n",
-    "print(summary)"
+    "doc_dir = os.path.join(root_absdir,'data','object_detection','output','ocr_samples_txt')\n",
+    "doc_files = os.listdir(doc_dir)\n",
+    "\n",
+    "summs = os.path.join(root_absdir,'data','text_summarization','output')\n",
+    "summ_dirs = ['method1','method2','method3','cluster_n_summary_temp0','cluster_n_summary_temp1']\n",
+    "\n",
+    "df = pd.DataFrame(columns=['file']+summ_dirs)\n",
+    "\n",
+    "for filename in doc_files:\n",
+    "    new_row = []\n",
+    "    new_row.append(filename)\n",
+    "    with open(os.path.join(doc_dir,filename),'r',encoding='utf-8') as f:\n",
+    "        doc = f.readlines()\n",
+    "    doc = (''.join(doc)).replace('\\n',' ')\n",
+    "    doc = erase_tag(doc, 'p.\\d*')\n",
+    "    len_doc = len(doc)\n",
+    "    \n",
+    "    for sd in summ_dirs:\n",
+    "        with open(os.path.join(summs,sd,filename),'r',encoding='utf-8') as f:\n",
+    "            summary = f.readlines()\n",
+    "        summary = (''.join(summary)).replace('\\n',' ')\n",
+    "        summary = erase_tag(summary,'[^>]+')\n",
+    "        new_row.append(round(len(summary)/len_doc,4)*100)\n",
+    "    df = pd.concat([df,pd.DataFrame(data=[new_row],columns=['file']+summ_dirs)],axis=0)\n",
+    "\n",
+    "df.to_csv('./hello.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4f7f35bf-3633-4d9c-99ed-7d692452ec2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' djfslfjdlkf '"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "erase_tag(\"<hello> djfslfjdlkf </hello>\", '[^>]+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "82c3bf92-b8b3-4ac6-8dd0-7b0466f8b631",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ac\n",
+      "abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 'abc'\n",
+    "print(t.replace('b',''))\n",
+    "print(t)"
    ]
   }
  ],
