[update] webapp - server side image classifiaction finished

--- a/code/text_summarization/G-EVAL_testcode.ipynb
+++ b/code/text_summarization/G-EVAL_testcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "7661fd00-51c5-47e4-93d4-2a2cdfb17618",
    "metadata": {},
    "outputs": [],
@@ -1850,154 +1850,229 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d1ed176-9f21-45d9-ba18-496f3b071255",
+   "metadata": {},
+   "source": [
+    "# G-Eval 결과에 대한 통계분석"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "91da427e-1430-48be-ac99-cf33dd894621",
+   "execution_count": 6,
+   "id": "1b45a89e-c64b-4bff-92ba-a683a575fbe3",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pdf</th>\n",
+       "      <th>relevance</th>\n",
+       "      <th>coherence</th>\n",
+       "      <th>consistency</th>\n",
+       "      <th>fluency</th>\n",
+       "      <th>summ/doc_ratio</th>\n",
+       "      <th>method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>arima_text</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>4.65</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>75.33</td>\n",
+       "      <td>method1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>asiancup_text</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>method1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>barbot_text</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>41.73</td>\n",
+       "      <td>method1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>blind_text</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>45.50</td>\n",
+       "      <td>method1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>braintumor_text</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>82.58</td>\n",
+       "      <td>method1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>netflix_text</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>21.04</td>\n",
+       "      <td>cluster1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>restaurant_text</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>53.95</td>\n",
+       "      <td>cluster1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>trading_text</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>99.27</td>\n",
+       "      <td>cluster1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>var_text</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>66.48</td>\n",
+       "      <td>cluster1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>webtoon_text</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>101.11</td>\n",
+       "      <td>cluster1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{0: 0, 1: 0, 2: 0, 3: 0, 4: 0, 5: 0}"
+       "                pdf  relevance  coherence  consistency  fluency  \\\n",
+       "0        arima_text       4.15       4.20         4.65     3.00   \n",
+       "1     asiancup_text       3.20       3.25         4.10     1.35   \n",
+       "2       barbot_text       4.00       4.40         4.05     3.00   \n",
+       "3        blind_text       4.00       4.00         4.00     2.60   \n",
+       "4   braintumor_text       4.00       4.15         4.10     2.00   \n",
+       "..              ...        ...        ...          ...      ...   \n",
+       "13     netflix_text       4.00       4.00         4.15     2.10   \n",
+       "14  restaurant_text       4.05       4.05         4.25     2.55   \n",
+       "15     trading_text       4.10       4.15         4.40     2.00   \n",
+       "16         var_text       4.50       4.30         4.35     2.35   \n",
+       "17     webtoon_text       4.05       4.05         4.30     2.65   \n",
+       "\n",
+       "    summ/doc_ratio    method  \n",
+       "0            75.33   method1  \n",
+       "1           114.23   method1  \n",
+       "2            41.73   method1  \n",
+       "3            45.50   method1  \n",
+       "4            82.58   method1  \n",
+       "..             ...       ...  \n",
+       "13           21.04  cluster1  \n",
+       "14           53.95  cluster1  \n",
+       "15           99.27  cluster1  \n",
+       "16           66.48  cluster1  \n",
+       "17          101.11  cluster1  \n",
+       "\n",
+       "[90 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scores_list = [0, 1, 2, 3, 3, 4, 5, 5, 5, 5]\n",
-    "{i: 0 for i in set(scores_list)}"
+    "m1 = pd.read_csv('../../data/text_summarization/output/g-evals/g-eval_method1_2327.csv')\n",
+    "m2 = pd.read_csv('../../data/text_summarization/output/g-evals/g-eval_method2_2329.csv')\n",
+    "m3 = pd.read_csv('../../data/text_summarization/output/g-evals/g-eval_method3_2331.csv')\n",
+    "m4 = pd.read_csv('../../data/text_summarization/output/g-evals/g-eval_cluster_n_summary_temp0_2323.csv')\n",
+    "m5 = pd.read_csv('../../data/text_summarization/output/g-evals/g-eval_cluster_n_summary_temp1_2326.csv')\n",
+    "ms = [m1,m2,m3,m4,m5]\n",
+    "methods = ['method1','method2','method3','cluster0','cluster1']\n",
+    "for i,m in enumerate(ms):\n",
+    "    m['method'] = methods[i]\n",
+    "combined = pd.concat(ms,axis=0)\n",
+    "combined"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b8c8efa1-a0a2-4298-ba48-7641aeb56772",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 0.1, 1: 0.1, 2: 0.1, 3: 0.2, 4: 0.1, 5: 0.4}\n",
-      "The weighted average is: 3.3000000000000003\n"
-     ]
-    }
-   ],
-   "source": [
-    "scores_list = [0, 1, 2, 3, 3, 4, 5, 5, 5, 5]\n",
-    "def calculate_weighted_average(scores):\n",
-    "    \"\"\"\n",
-    "    Calculate the weighted average of a list of scores, where the weights are determined\n",
-    "    by the frequency of each score in the list.\n",
-    "\n",
-    "    :param scores: A list of integer scores in the range of 0 to 5.\n",
-    "    :return: The weighted average of the scores.\n",
-    "    \"\"\"\n",
-    "    # Check if the list is empty\n",
-    "    if not scores:\n",
-    "        return 0\n",
-    "\n",
-    "    # Calculate the frequency of each score\n",
-    "    score_counts = {i: 0 for i in set(scores)}  # Initialize counts for scores 0 to 5\n",
-    "    for score in scores:\n",
-    "        score_counts[score] += 1\n",
-    "\n",
-    "    # Calculate the total number of scores\n",
-    "    total_scores = len(scores)\n",
-    "\n",
-    "    # Calculate probabilities (weights) for each score\n",
-    "    probabilities = {score: count / total_scores for score, count in score_counts.items()}\n",
-    "    print(probabilities)\n",
-    "\n",
-    "    # Calculate the weighted average (weighted sum)\n",
-    "    weighted_sum = sum(score * probabilities[score] for score in set(scores))\n",
-    "    return weighted_sum\n",
-    "result = calculate_weighted_average(scores_list)\n",
-    "print(f\"The weighted average is: {result}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "e3b72099-602d-428c-a4fb-31a1ceb7f4cd",
+   "execution_count": null,
+   "id": "cf927599-6ad1-4133-9b9a-866635e8ee18",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ROOT = 'bitamin_auto_readme_generator'\n",
-    "root_absdir = os.getcwd().split(ROOT)[0]+ROOT\n",
-    "\n",
-    "doc_dir = os.path.join(root_absdir,'data','object_detection','output','ocr_samples_txt')\n",
-    "doc_files = os.listdir(doc_dir)\n",
-    "\n",
-    "summs = os.path.join(root_absdir,'data','text_summarization','output')\n",
-    "summ_dirs = ['method1','method2','method3','cluster_n_summary_temp0','cluster_n_summary_temp1']\n",
-    "\n",
-    "df = pd.DataFrame(columns=['file']+summ_dirs)\n",
-    "\n",
-    "for filename in doc_files:\n",
-    "    new_row = []\n",
-    "    new_row.append(filename)\n",
-    "    with open(os.path.join(doc_dir,filename),'r',encoding='utf-8') as f:\n",
-    "        doc = f.readlines()\n",
-    "    doc = (''.join(doc)).replace('\\n',' ')\n",
-    "    doc = erase_tag(doc, 'p.\\d*')\n",
-    "    len_doc = len(doc)\n",
-    "    \n",
-    "    for sd in summ_dirs:\n",
-    "        with open(os.path.join(summs,sd,filename),'r',encoding='utf-8') as f:\n",
-    "            summary = f.readlines()\n",
-    "        summary = (''.join(summary)).replace('\\n',' ')\n",
-    "        summary = erase_tag(summary,'[^>]+')\n",
-    "        new_row.append(round(len(summary)/len_doc,4)*100)\n",
-    "    df = pd.concat([df,pd.DataFrame(data=[new_row],columns=['file']+summ_dirs)],axis=0)\n",
-    "\n",
-    "df.to_csv('./hello.csv')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "4f7f35bf-3633-4d9c-99ed-7d692452ec2c",
+   "execution_count": null,
+   "id": "81a02ed6-df61-470d-a067-3f8f38448ee2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' djfslfjdlkf '"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "erase_tag(\"<hello> djfslfjdlkf </hello>\", '[^>]+')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "82c3bf92-b8b3-4ac6-8dd0-7b0466f8b631",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ac\n",
-      "abc\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = 'abc'\n",
-    "print(t.replace('b',''))\n",
-    "print(t)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
