[update] text_summ method1,2,3 ipynb&py files

--- a/code/text_summarization/textsumm_method2.ipynb
+++ b/code/text_summarization/textsumm_method2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "H-8f48Oxetyi"
       },
@@ -25,16 +25,16 @@
       },
       "outputs": [],
       "source": [
-        "#파일 1개 테스트용\n",
+        "'''#파일 1개 테스트용\n",
         "file_path = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\object_detection\\\\output\\\\ocr_samples_txt\\\\trading_text.txt'\n",
         "\n",
         "with open(file_path, 'r', encoding='utf-8') as file:\n",
-        "        text = file.read()"
+        "        text = file.read()'''"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 2,
       "metadata": {
         "id": "XXCSOd6ldbz4"
       },
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 3,
       "metadata": {
         "id": "bcVtzndaqbXY"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,12 +71,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
         "llm_4 = ChatOpenAI(\n",
-        "    model=\"gpt-4o\",\n",
+        "    model=\"gpt-4o-mini\",\n",
         "    openai_api_key=os.environ['OPENAI_API_KEY']\n",
         ")"
       ]
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -229,9 +229,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\arima_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\asiancup_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\barbot_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\blind_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\braintumor_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\cartoon_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\disease_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\energy_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\hangang_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\insideout_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\interior_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\kospi_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\lier-detector_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\netflix_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\restaurant_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\trading_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\var_text.txt'.\n",
+            "Summarized text has been saved to 'C:\\Users\\PC\\Desktop\\DoYoung\\DS\\github\\bitamin_auto_readme_generator\\data\\text_summarization\\output\\method2\\webtoon_text.txt'.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "\n",
