--- a/code/text_summarization/textsumm_method3.ipynb
+++ b/code/text_summarization/textsumm_method3.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -73,12 +73,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
         "llm_4 = ChatOpenAI(\n",
-        "    model=\"gpt-4o\",\n",
+        "    model=\"gpt-4o-mini\",\n",
         "    openai_api_key=os.environ['OPENAI_API_KEY']\n",
         ")"
       ]
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -203,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -268,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -333,8 +333,6 @@
         }
       ],
       "source": [
-        "import os\n",
-        "\n",
         "input_directory = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\object_detection\\\\output\\\\ocr_samples_txt'\n",
         "\n",
         "output_directory = 'C:\\\\Users\\\\PC\\\\Desktop\\\\DoYoung\\\\DS\\\\github\\\\bitamin_auto_readme_generator\\\\data\\\\text_summarization\\\\output\\\\method3'\n",
@@ -348,7 +346,7 @@
         "        with open(file_path, 'r', encoding='utf-8') as file:\n",
         "            text = file.read()\n",
         "\n",
-        "        extracted_info = extract_info(text)  \n",
+        "        extracted_info = extract_info(text, marker='<p.6>')  \n",
         "        main_topics_list = extract_main_topics(extracted_info)\n",
         "        divided_text = divide_text(extracted_info, main_topics_list, text)\n",
         "        summarized_text = summarize(divided_text, main_topics_list)\n",
